[20241118] 인증 로직 및 프론트엔드 자동연결